increase z-index to ensure carousel chevrons stay below the sticky toc

--- a/express/features/table-of-contents-seo/table-of-contents-seo.css
+++ b/express/features/table-of-contents-seo/table-of-contents-seo.css
@@ -117,6 +117,7 @@ main .section.section-wrapper .mobile-toc {
   background-color: #f8f8f8;
   margin: 0;
   max-width: none;
+  z-index: 2;
 }
 
 .mobile-toc .toc-title {
@@ -147,7 +148,7 @@ main .section.section-wrapper .mobile-toc {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .toc-chevron {
